tests/test181.rael.exp
Error [tests/test181.rael:2:17]: Unexpected amount of arguments
| log :Types:Range(1, 2, 3, 4, 5)
|                 ^
